# python-project-example

./: .gitignore  README.md  config.yml  docker-compose.yml  pyproject.toml
src/: core_api.py  core_cli.py  core_lambda.py
src/applications/base/: wire.py
src/applications/base/auth/: auth.py  bearer.py  dependencies.py
src/applications/base/exceptions/: handlers.py
src/applications/base/middlewares/: async_session_middleware.py  cors.py
src/applications/base/schemas/: base_schema.py
src/applications/core_api/: settings.py
src/applications/core_api/core/: main.py
src/containers/: core.py  infra.py  main.py  system.py
src/contexts/: retry.py  tansactional_group_task.py  transactional.py
src/contexts/rate_limit/: exceptions.py  rate_limit.py
src/contexts/rate_limit/rate_policies/: base.py  simple.py
src/cores/exceptions/: unauthenticated_exception.py  unauthorized_exception.py
src/cores/exceptions/exceptions/: bad_request_exception.py  base_service_exception.py  forbidden_exception.py  not_found_exception.py
src/cores/jwt/: client.py  enums.py  exceptions.py  results.py
src/cores/password/: handler.py
src/cores/utils/: iterator.py
src/domains/base/: domain_model.py  models_with_total_count.py
src/domains/user/models/: user.py
src/domains/user/services/: user_my_service.py  user_service.py
src/infra/exceptions/: infra_exception.py
src/infra/rdb/: engine.py
src/infra/rdb/base/: base.py  base_entity.py  base_repository.py  handler.py  (+2 more)
src/infra/redis/: pool.py
src/tests/: conftest.py
src/tests/services/: test_user_service.py
(+9 files in other folders)
