[tool.poetry]
name = "'"
version = "0.1.0"
description = ""
authors = ["byunjuneseok <byunjuneseok@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
aiomysql = "^0.2.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
redis = "^5.0.3"
boto3 = "^1.34.68"
pytz = "^2024.1"
pydantic = "^2.6.4"
pydantic-extra-types = "^2.6.0"
pydantic-settings = "^2.2.1"
phonenumbers = "^8.13.32"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
isort = "^5.13.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["src"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
float_to_top = true
line_length = 120
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_alphabetical_sort_within_sections = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic"]
ignore = ["E501"]
